---------------------------------------------------------------------------------------------------
Version: 0.69.62
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.61
Date: 2025-06-13
  Changes:
    - Added an interface for PlanetHoppers to use to block Rubia access if you don't actually have the gear.
---------------------------------------------------------------------------------------------------
Version: 0.69.60
Date: 2025-06-11
  Changes:
    - Russian locale re-reupdated.
    - Trashsteroid character damage 280 => 300 on normal difficulty, because you really should have shields.
    - Buff sniper turret: HP 300 => 600, impact resistance 0% => 30%. This should help with setting up mining outposts.
---------------------------------------------------------------------------------------------------
Version: 0.69.59
Date: 2025-06-11
  Changes:
    - Updated list of mods that block you from Rubia postgame content.
    - Updated Russian localization, thanks to Пружинка.
---------------------------------------------------------------------------------------------------
Version: 0.69.58
Date: 2025-06-11
  Changes:
    - Lignumis compatibility
---------------------------------------------------------------------------------------------------
Version: 0.69.57
Date: 2025-06-10
  Changes:
    - Krastorio 2 spaced out compatibility. Thanks, Polka!
    - Removed unnecessary global variables for other mods.
    - Infinite quality tiers should no longer horrendously lag the game when mousing over a wind turbine.
---------------------------------------------------------------------------------------------------
Version: 0.69.56
Date: 2025-06-07
  Changes:
    - Made Rocketizer description clearer.