@@ -320,11 +320,15 @@ visit-rubia=Amateur Shartographer
 land-on-rubia=I survived the drop, and all I got was this stupid achievement
 research-with-biorecycling=Research with biorecycling science
 rubia-lore-complete=Accomplished Shitstorian
+rubia-easy-mode=It's not the size that matters
+rubia-very-very-hard-clear=You were supposed to die
 
 [achievement-description]
 land-on-rubia=Land on Rubia without dying.
 research-with-biorecycling=Unlock a research using biorecycling science in a lab.
 rubia-lore-complete=Find all lore from exploring Rubia's trash heaps.
+rubia-easy-mode=Pick a more fitting difficulty level for Rubia.
+rubia-very-very-hard-clear=Beat Rubia while on "Engineer Must Die" difficulty from the moment you land to when you blast off.
 
 [mod-setting-name]
 disable-lyrical-music=Disable lyrical music
