@@ -25,5 +25,19 @@ data:extend(
         icon = "__base__/graphics/achievement/you-are-doing-it-right.png",
         icon_size = 128,
     },
+    {
+        type = "achievement",
+        name = "rubia-easy-mode",
+        order = "a[progress]-r[rubia]-d",
+        icon = "__rubia-assets__/graphics/achievement/achievement-small.png",
+        icon_size = 128,
+    },
+    {
+        type = "achievement",
+        name = "rubia-very-very-hard-clear",
+        order = "a[progress]-r[rubia]-e",
+        icon = "__base__/graphics/achievement/golem.png",
+        icon_size = 128,
+    },
 }
 )
